[gd_scene load_steps=18 format=3 uid="uid://drvyjdy11ff3h"]

[ext_resource type="PackedScene" path="res://dice/d6.tscn" id="1"]
[ext_resource type="Script" path="res://main.gd" id="2"]
[ext_resource type="PackedScene" path="res://World/wall.tscn" id="3"]
[ext_resource type="PackedScene" path="res://Interface/Interface.tscn" id="4"]
[ext_resource type="PackedScene" path="res://dice/d20.tscn" id="5"]
[ext_resource type="PackedScene" path="res://dice/d10.tscn" id="6"]
[ext_resource type="PackedScene" path="res://dice/d12.tscn" id="7"]
[ext_resource type="PackedScene" path="res://dice/d4.tscn" id="8"]
[ext_resource type="PackedScene" path="res://dice/d8.tscn" id="9"]
[ext_resource type="Script" path="res://World/DiceInteractions.gd" id="11"]
[ext_resource type="Script" path="res://World/DiceManager.gd" id="12"]

[sub_resource type="PhysicsMaterial" id="1"]

[sub_resource type="BoxMesh" id="2"]
size = Vector3(50, 0.2, 50)

[sub_resource type="BoxShape3D" id="4"]
size = Vector3(50, 20, 50)

[sub_resource type="SphereShape3D" id="9"]
radius = 1.2

[sub_resource type="SphereShape3D" id="10"]
radius = 2.0

[sub_resource type="SphereShape3D" id="11"]
radius = 8.0

[node name="main" type="Node3D"]
script = ExtResource("2")
version = "1"
version_message = "New update!
Implemented a new settings system 
to save your preferences between sessions.
With that, I've also added a few options of 
customizing the UI and dice behaviour.

I've also increased the wall width so you can 
throw dice harder

Next up: dice syntax support!

Have feedback? You can tell me here:
[url]https://discord.gg/h7udm2T2GT[/url]"

[node name="Interface" parent="." instance=ExtResource("4")]
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="Box" type="Node3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="Floor" type="StaticBody3D" parent="Box"]
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Box/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
cast_shadow = 0
mesh = SubResource("2")

[node name="Border" type="MeshInstance3D" parent="Box/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
cast_shadow = 0
mesh = SubResource("2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Box/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)
shape = SubResource("4")

[node name="OtherBoxSides" type="Node3D" parent="Box"]

[node name="Roof" type="StaticBody3D" parent="Box/OtherBoxSides"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 0)
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Box/OtherBoxSides/Roof"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
shape = SubResource("4")

[node name="Wall-z" parent="Box/OtherBoxSides" instance=ExtResource("3")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -25)

[node name="Wall+z" parent="Box/OtherBoxSides" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 25)

[node name="Wall-x" parent="Box/OtherBoxSides" instance=ExtResource("3")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 25, 0, 0)

[node name="Wall+x" parent="Box/OtherBoxSides" instance=ExtResource("3")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -25, 0, 0)

[node name="ResizeTicks" type="Timer" parent="Box"]
wait_time = 0.15

[node name="DiceManager" type="Node3D" parent="."]
script = ExtResource("12")
dice_type_strings = PackedStringArray("d4", "d6", "d8", "d10", "d12", "d20")
dice_type_scenes = {
"d10": ExtResource("6"),
"d12": ExtResource("7"),
"d20": ExtResource("5"),
"d4": ExtResource("8"),
"d6": ExtResource("1"),
"d8": ExtResource("9")
}

[node name="DiceInteractions" type="Node3D" parent="."]
script = ExtResource("11")

[node name="RotateTicks" type="Timer" parent="DiceInteractions"]
wait_time = 0.2

[node name="MinDistance" type="Area3D" parent="DiceInteractions"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DiceInteractions/MinDistance"]
shape = SubResource("9")

[node name="MaxDistance" type="Area3D" parent="DiceInteractions/MinDistance"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DiceInteractions/MinDistance/MaxDistance"]
shape = SubResource("10")

[node name="GrabArea" type="Area3D" parent="DiceInteractions"]
collision_layer = 0
collision_mask = 2
gravity_point = true
gravity_point_center = Vector3(0, 0, 0)
gravity_direction = Vector3(0, 0, 0)
gravity = 100.0
linear_damp = 10.0
angular_damp = 20.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="DiceInteractions/GrabArea"]
shape = SubResource("11")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.403317, 0.888258, -0.219846, -0.492404, 0.413176, 0.766044, 0.771281, -0.200706, 0.604023, 0, 5, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.258819, 0.965926, 0, -0.965926, 0.258819, 0, 7, 2.7)
current = true

[node name="ZoomTicks" type="Timer" parent="Camera3D"]
wait_time = 0.15

[connection signal="timeout" from="Box/ResizeTicks" to="." method="_on_ResizeTicks_timeout"]
[connection signal="timeout" from="DiceInteractions/RotateTicks" to="DiceInteractions" method="_on_RotateTicks_timeout"]
[connection signal="timeout" from="Camera3D/ZoomTicks" to="." method="_on_ZoomTicks_timeout"]
